# medallion-aws-kit

./: .gitignore  LICENSE  README.md  pyproject.toml
conventions/: deduplication_rules.md  naming_conventions.md  partitioning_strategy.md
dbt/: dbt_project.yml  profiles.yml.example
dbt/macros/: add_metadata_columns.sql  deduplicate.sql  standardize_boolean.sql
dbt/models/bronze/: sources.yml
dbt/models/gold/: gold_orders_daily.sql  schema.yml
dbt/models/silver/: _silver_conventions.md  schema.yml  silver_orders.sql
dbt/tests/generic/: not_null_proportion.sql
ingestion/: __init__.py  glue_crawler_trigger.py  s3_loader.py
scripts/: bootstrap.sh
terraform/: backend.tf
terraform/environments/dev/: main.tf  terraform.tfvars
terraform/environments/prod/: main.tf  terraform.tfvars
terraform/modules/glue_catalog/: main.tf  outputs.tf  variables.tf
terraform/modules/iam_roles/: main.tf  outputs.tf  variables.tf
terraform/modules/redshift_serverless/: main.tf  outputs.tf  variables.tf
terraform/modules/s3_lakehouse/: main.tf  outputs.tf  variables.tf
tests/: test_dbt_macros.py  test_glue_crawler_trigger.py  test_s3_loader.py
