[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "medallion-aws-kit"
version = "1.0.0"
description = "Production-ready Medallion Architecture Starter Kit for AWS"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "boto3>=1.34.0",
    "pyarrow>=15.0.0",
    "pandas>=2.2.0",
]

[project.optional-dependencies]
dbt = [
    "dbt-core>=1.7.0",
    "dbt-redshift>=1.7.0",
]

dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.14.0",
    "pytest-cov>=5.0.0",
    "moto[s3,glue]>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "boto3-stubs[s3,glue]>=1.34.0",
]

[tool.hatch.build.targets.wheel]
packages = ["ingestion"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=ingestion --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
source = ["ingestion"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
